--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -64,5 +64,29 @@
   <div style="background-image: url(assets/startbg.jpg);height: 100%;width: 100%;background-size: cover;background-position: center;background-repeat: no-repeat"></div>
 </app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script src="assets/admin/js/jquery.min.js"></script>
 
+<script>
+  $(document).ready(function () {
+    $.ajax({
+      url: '/api/user/autoLogin',
+      type: 'post',
+      dataType: 'json',
+      data:{
+      },
+      contentType: 'application/x-www-form-urlencoded;charset=UTF-8',
+      cache: false,
+      success: function(data) {
+        if(data.status==10000){
+
+        }
+      },
+      error : function() {
+        alert('服务器失去响应，请检查您的网络！');
+
+
+      }
+    })
+  })
+</script>
 </html>
