--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -1,6 +1,9 @@
 <carousel>
   <slide *ngFor="let pic of products.Pic">
-    <img src="{{pic.Image}}" alt="First slide" style="height: 400px;">
+    <div style="text-align: center">
+      <img src="{{pic.Image}}" alt="First slide" style="height: 400px;width: auto;margin: 0 auto">
+
+    </div>
   </slide>
 </carousel>
 <div class="white-box">
