--- a/ng-ebook/src/app/Message/message.component.html
+++ b/ng-ebook/src/app/Message/message.component.html
@@ -1,12 +1,12 @@
 <carousel>
   <slide>
-      <img src="/assets/6.jpeg" alt="" style="height: 200px">
+      <img src="/web-static/admin/img/p1.jpg" alt="" style="height: 200px">
     <div class="carousel-caption">
       <p>任何商品免费送货</p>
     </div>
   </slide>
   <slide>
-    <img src="/assets/5.jpeg" alt="" style="height: 200px">
+    <img src="/web-static/admin/img/p2.jpg" alt="" style="height: 200px">
     <div class="carousel-caption">
       <p>海量图书任你选</p>
     </div>
@@ -21,7 +21,7 @@
         <div class="col-md-4 col-xs-4">
           <div>
             <a style="" href="#">
-              <div  style="background-image: url(/assets/5.jpeg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
+              <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
                 <img src="/assets/admin/img/tm.png" alt="">
               </div>
             </a>
@@ -41,7 +41,7 @@
         <div class="col-md-4 col-xs-4">
           <div>
             <a style="" href="#">
-              <div  style="background-image: url(/assets/5.jpeg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
+              <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
                 <img src="/assets/admin/img/tm.png" alt="">
               </div>
             </a>
@@ -61,7 +61,7 @@
         <div class="col-md-4 col-xs-4">
           <div>
             <a style="" href="#">
-              <div  style="background-image: url(/assets/5.jpeg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
+              <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
                 <img src="/assets/admin/img/tm.png" alt="">
               </div>
             </a>
@@ -81,7 +81,7 @@
         <div class="col-md-4 col-xs-4">
           <div>
             <a style="" href="#">
-              <div  style="background-image: url(/assets/5.jpeg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
+              <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
                 <img src="/assets/admin/img/tm.png" alt="">
               </div>
             </a>
@@ -101,7 +101,7 @@
         <div class="col-md-4 col-xs-4">
           <div>
             <a style="" href="#">
-              <div  style="background-image: url(/assets/5.jpeg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
+              <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
                 <img src="/assets/admin/img/tm.png" alt="">
               </div>
             </a>
@@ -121,7 +121,7 @@
         <div class="col-md-4 col-xs-4">
           <div>
             <a style="" href="#">
-              <div  style="background-image: url(/assets/5.jpeg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
+              <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
                 <img src="/assets/admin/img/tm.png" alt="">
               </div>
             </a>
