--- a/ng-ebook/src/app/Message/message.component.html
+++ b/ng-ebook/src/app/Message/message.component.html
@@ -22,7 +22,7 @@
           <div>
             <a style="" href="#">
               <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
-                <img src="/assets/admin/img/tm.png" alt="">
+                <img src="/web-static/admin/img/book.png" alt="">
               </div>
             </a>
           </div>
@@ -42,7 +42,7 @@
           <div>
             <a style="" href="#">
               <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
-                <img src="/assets/admin/img/tm.png" alt="">
+                <img src="/web-static/admin/img/book.png" alt="">
               </div>
             </a>
           </div>
@@ -62,7 +62,7 @@
           <div>
             <a style="" href="#">
               <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
-                <img src="/assets/admin/img/tm.png" alt="">
+                <img src="/web-static/admin/img/book.png" alt="">
               </div>
             </a>
           </div>
@@ -82,7 +82,7 @@
           <div>
             <a style="" href="#">
               <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
-                <img src="/assets/admin/img/tm.png" alt="">
+                <img src="/web-static/admin/img/book.png" alt="">
               </div>
             </a>
           </div>
@@ -102,7 +102,7 @@
           <div>
             <a style="" href="#">
               <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
-                <img src="/assets/admin/img/tm.png" alt="">
+                <img src="/web-static/admin/img/book.png" alt="">
               </div>
             </a>
           </div>
@@ -122,7 +122,7 @@
           <div>
             <a style="" href="#">
               <div  style="background-image: url(/web-static/admin/img/2.jpg);background-size: cover;background-position: center;width: 100%;max-height: 60px">
-                <img src="/assets/admin/img/tm.png" alt="">
+                <img src="/web-static/admin/img/book.png" alt="">
               </div>
             </a>
           </div>
