--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 <app-root>
-  <div style="background-image: url(assets/startbg.jpg);height: 100%;width: 100%;background-size: cover;background-position: center;background-repeat: no-repeat"></div>
+  <div style="background-image: url(assets/bookbg.jpg);height: 100%;width: 100%;background-size: cover;background-position: center;background-repeat: no-repeat"></div>
 </app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
