--- a/ng-ebook/src/app/Product/product-buy.component.html
+++ b/ng-ebook/src/app/Product/product-buy.component.html
@@ -86,7 +86,7 @@
     </div>
   </div>
 </div>
-<div id="loadingToast" class="weui_loading_toast" style="display:none;">
+<div id="loadingToast" class="weui_loading_toast" [(style.display)]="isDisplay">
   <div class="weui_mask_transparent"></div>
   <div class="weui_toast">
     <div class="weui_loading">
