--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -30,7 +30,7 @@
   <div class="height10"></div>
   <div class="row">
     <div class="col-xs-4" style="text-align: center">
-      <button class="btn btn-default" style="background-color: #ddd;width: 100px">加入购物车</button>
+      <a class="btn btn-default" style="background-color: #ddd;width: 100px" href="javascript:void(0)" onclick="addCart({{this.products.Id}},{{this.products.Name}},{{this.products.Price}},{{this.products.Image}},1,{{this.products.Content}})">加入购物车</a>
     </div>
     <div class="col-xs-4" style="text-align: center">
       <a [routerLink]="['/rent', products.Id]" class="btn btn-default uploadOrderBtn" style="background-color: orangered;color: #fff;width: 100px">租赁</a>
@@ -109,4 +109,41 @@
 </div>
 
 
+
+<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #autoShownModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">提示信息</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{modelText}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="loadingToast" class="weui_loading_toast" [(style.display)]="isDisplay">
+  <div class="weui_mask_transparent"></div>
+  <div class="weui_toast">
+    <div class="weui_loading">
+      <!-- :) -->
+      <div class="weui_loading_leaf weui_loading_leaf_0"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_1"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_2"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_3"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_4"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_5"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_6"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_7"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_8"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_9"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_10"></div>
+      <div class="weui_loading_leaf weui_loading_leaf_11"></div>
+    </div>
+    <p class="weui_toast_content">数据加载中</p>
+  </div>
+</div>
 
