--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -125,7 +125,7 @@
     </div>
   </div>
 </div>
-<div id="loadingToast" class="weui_loading_toast" [(style.display)]="isDisplay">
+<div id="loadingToast" class="weui_loading_toast" style="display:{{isDisplay}};">
   <div class="weui_mask_transparent"></div>
   <div class="weui_toast">
     <div class="weui_loading">
