--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -112,7 +112,7 @@
 
 <div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #autoShownModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-sm">
-    <div class="modal-content">
+    <div class="modal-content" style="margin-top: 10.5%">
       <div class="modal-header">
         <h4 class="modal-title pull-left">提示信息</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal()">
