--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -110,8 +110,8 @@
 
 
 
-<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #autoShownModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="z-index: -1">
-  <div class="modal-dialog modal-sm">
+<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #autoShownModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-sm" style="z-index: -2">
     <div class="modal-content" style="margin-top: 20.5%;z-index: 10000">
       <div class="modal-header">
         <h4 class="modal-title pull-left">提示信息</h4>
