--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>酷乐堂</title>
+  <title>电子书城</title>
   <base href="/assets/">
   <style>
     .weui-tabbar__label{
