--- a/ng-ebook/src/app/Cart/cart.component.html
+++ b/ng-ebook/src/app/Cart/cart.component.html
@@ -24,6 +24,7 @@
             <div class="row">
               <div class="col-xs-6">
                 <span style="color: #e35b5a;font-size: 10px">￥</span><span style="color: #e35b5a">{{cart.Price * cart.Num}}</span>
+                <span style="font-size: 8px;margin-left: 10px">×{{cart.Num}}</span>
               </div>
               <div class="col-xs-6" style="text-align: right">
                 <button class="btn btn-danger" style="height: 20px;font-size: 10px;line-height: 8px">删除</button>
