--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -6,7 +6,7 @@
     </div>
   </slide>
 </carousel>
-<div class="white-box">
+<div class="white-box" style="z-index: -1">
   <div class="container">
     <div style="height: 7px"></div>
     <p style="color: #555;font-size: 14px;font-weight: 700">{{this.products.Name}} - {{products.Content}}</p>
