--- a/ng-ebook/src/app/app.component.html
+++ b/ng-ebook/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="weui-tab"  style="z-index: -1">
+<div class="weui-tab"  >
   <div class="weui-tab__bd">
-    <div id="tab1" class="weui-tab__bd-item weui-tab__bd-item--active" style="background-color: #efeff4">
+    <div id="tab1" class="weui-tab__bd-item weui-tab__bd-item--active" style="background-color: #efeff4;z-index: -1">
       <!--页面组件内容-->
       <router-outlet>
       </router-outlet>
