--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -109,41 +109,11 @@
 </div>
 
 
-
-<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #autoShownModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog modal-sm" style="background-color: #fff">
-    <div class="modal-content" style="margin-top: 20.5%;z-index: 10000;background-color: #fff;">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">提示信息</h4>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>{{modelText}}</p>
-      </div>
-    </div>
+<div *ngIf="isModalShown" id="toast">
+  <div class="weui_mask_transparent"></div>
+  <div class="weui_toast">
+    <i class="weui_icon_toast"></i>
+    <p class="weui_toast_content">{{modelText}}</p>
   </div>
 </div>
-<!--<div id="loadingToast" class="weui_loading_toast" style="display:{{isDisplay}};">-->
-  <!--<div class="weui_mask_transparent"></div>-->
-  <!--<div class="weui_toast">-->
-    <!--<div class="weui_loading">-->
-      <!--&lt;!&ndash; :) &ndash;&gt;-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_0"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_1"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_2"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_3"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_4"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_5"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_6"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_7"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_8"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_9"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_10"></div>-->
-      <!--<div class="weui_loading_leaf weui_loading_leaf_11"></div>-->
-    <!--</div>-->
-    <!--<p class="weui_toast_content">数据加载中</p>-->
-  <!--</div>-->
-<!--</div>-->
 
