--- a/ng-ebook/src/app/Cart/cart.component.html
+++ b/ng-ebook/src/app/Cart/cart.component.html
@@ -1,3 +1,14 @@
+
+
+<div class="Toast" style="position: fixed;z-index: 10000000;background-color: rgba(0,0,0,0.6);text-align: center;padding: 8px;height: 100%;width: 100%;pointer-events: none"  *ngIf="isShownMessage">
+  <div class="ToastImg" style="text-align: center;position: absolute;width: 200px;height: 100px;left:50%;top:50%;margin-left:-100px;margin-top:-50px;">
+    <!--<img src="/web-static/admin/img/loading.gif" width="30px" height="30px" alt="">-->
+    <i class="fa fa-shopping-cart fa-stack-2x" style="color: #fff;margin-bottom: 10px;position: relative"></i>
+    <p style="color: #fff;font-size: 16px;position: relative">{{showMessage}}</p>
+  </div>
+</div>
+
+
 <div class="container">
 
   <form action="" id="cart" name="cart">
@@ -50,7 +61,7 @@
   <div  class="weui-tabbar__item" style="background-color: #fff;color: #555">
     <div style="height: 5px"></div>
     <div class="weui-tabbar__label">
-      总计：<span style="color: #e35b5a">￥</span><span id="count" style="color: #e35b5a">0</span>
+      总计：<span style="color: #e35b5a">￥</span><span id="count" style="color: #e35b5a">{{count}}</span>
 
     </div>
   </div>
