--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -1,13 +1,25 @@
+
+
+
+<div class="Toast" style="position: fixed;z-index: 10000000;background-color: rgba(0,0,0,0.6);text-align: center;padding: 8px;height: 100%;width: 100%;pointer-events: none"  *ngIf="isShownMessage">
+  <div class="ToastImg" style="text-align: center;position: absolute;width: 200px;height: 100px;left:50%;top:50%;margin-left:-100px;margin-top:-50px;">
+    <!--<img src="/web-static/admin/img/loading.gif" width="30px" height="30px" alt="">-->
+    <i class="fa fa-shopping-cart fa-stack-2x" style="color: #fff;margin-bottom: 10px;position: relative"></i>
+    <p style="color: #fff;font-size: 16px;position: relative">{{showMessage}}</p>
+  </div>
+</div>
 <carousel>
   <slide *ngFor="let pic of products.Pic">
     <div style="text-align: center">
-      <img src="{{pic.Image}}" alt="First slide" style="height: 400px;width: auto;margin: 0 auto">
-
+      <div [ngStyle]="{'background-image':+'url('+ pic.Image+')'}" style="position: relative;background-position: center;background-size: cover;min-height: 300px">
+        <img src="assets/admin/img/tm.png" width="100%" height="auto" alt="">
+      </div>
     </div>
   </slide>
 </carousel>
 <div class="white-box">
   <div class="container">
+
     <div style="height: 7px"></div>
     <p style="color: #555;font-size: 14px;font-weight: 700">{{this.products.Name}} - {{products.Content}}</p>
     <div style="height: 10px"></div>
@@ -30,13 +42,10 @@
   <div class="height10"></div>
   <div class="row">
     <div class="col-xs-4" style="text-align: center">
-      <button class="btn btn-default" style="background-color: #ddd;width: 100px" (click)="addCart()">加入购物车</button>
+      <button class="btn btn-default" style="background-color: #ddd;width: 100px;font-size: 13px;height: 35px" (click)="addCart()">加入购物车</button>
     </div>
     <div class="col-xs-4" style="text-align: center">
-      <a [routerLink]="['/rent', products.Id]" class="btn btn-default uploadOrderBtn" style="background-color: orangered;color: #fff;width: 100px">租赁</a>
-    </div>
-    <div class="col-xs-4" style="text-align: center">
-      <a [routerLink]="['/buy', products.Id]" class="btn btn-default uploadOrderBtn" style="background-color: orange;color: #fff;width: 100px">立即购买</a>
+      <a [routerLink]="['/buy', products.Id]" class="btn btn-default uploadOrderBtn" style="background-color: orange;color: #fff;width: 90px;font-size: 13px;height: 35px">立即购买</a>
     </div>
   </div>
   <div class="height10"></div>
@@ -109,9 +118,4 @@
 </div>
 
 
-<alert type="success" dismissOnTimeout="1500">
-  <strong>Well done!</strong> You successfully read this important alert message.
-</alert>
-<div *ngFor="let alert of alerts">
-  <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout">{{ alert.msg }}</alert>
-</div>
+
