--- a/ng-ebook/src/app/Cart/cart.component.html
+++ b/ng-ebook/src/app/Cart/cart.component.html
@@ -1,5 +1,4 @@
 
-
 <div class="Toast" style="position: fixed;z-index: 10000000;background-color: rgba(0,0,0,0.6);text-align: center;padding: 8px;height: 100%;width: 100%;pointer-events: none"  *ngIf="isShownMessage">
   <div class="ToastImg" style="text-align: center;position: absolute;width: 200px;height: 100px;left:50%;top:50%;margin-left:-100px;margin-top:-50px;">
     <!--<img src="/web-static/admin/img/loading.gif" width="30px" height="30px" alt="">-->
@@ -13,13 +12,7 @@
 
   <form action="" id="cart" name="cart">
     <div class="row car_product" *ngFor="let cart of carts">
-      <div class="col-xs-2">
-        <div style="height: 18px"></div>
-        <div class="checkboxFour">
-          <input type="checkbox"  value="1" class="checkboxInput" name="" />
-        </div>
-      </div>
-      <div class="col-xs-10" style="padding: 0px 13px 0px 0px">
+      <div class="col-xs-12" style="padding: 0px 13px 0px 0px">
         <div class="row">
           <div class="col-xs-3" style="padding: 0 0 0 8px">
             <div style="height: 6px"></div>
@@ -28,20 +21,21 @@
             </div>
           </div>
           <div class="col-xs-9">
-            <div style="height: 40px;overflow: hidden">
-              <p style="font-size: 12px">{{cart.Name}}-{{cart.Content}}</p>
+            <div style="height: 43px;overflow: hidden">
+              <p style="font-size: 14px">{{cart.Name}}-{{cart.Content}}</p>
             </div>
             <div style="height: 3px"></div>
             <div class="row">
               <div class="col-xs-8">
-                <span style="color: #e35b5a;font-size: 10px">￥</span><span style="color: #e35b5a">{{cart.Price * cart.Num}}</span>
-                <span style="font-size: 12px;margin-left: 8px">×{{cart.Num}}</span>
+                <span style="color: #e35b5a;font-size: 12px">￥</span><span style="color: #e35b5a">{{cart.Price}}</span>
+                <span style="font-size: 12px;margin-left: 8px;color: #999">×{{cart.Num}}</span>
               </div>
               <div class="col-xs-4" style="text-align: right">
-                <button class="btn btn-danger" style="height: 20px;font-size: 10px;line-height: 8px">删除</button>
+                <button class="btn btn-danger" (click)="deleteCar(cart.Id)" style="height: 30px;font-size: 12px;line-height: 15px;margin-top: -8px">删除 <i class="fa fa-trash-o"></i></button>
               </div>
 
             </div>
+            <div style="height: 8px"></div>
           </div>
         </div>
       </div>
@@ -56,9 +50,9 @@
 
 
 </div>
-<div class="weui-tabbar" style="bottom: 53px;background-color: #fff;position: fixed">
+<div class="weui-tabbar" style="bottom: 48px;background-color: #fff;position: fixed;font-size: 16px">
 
-  <div  class="weui-tabbar__item" style="background-color: #fff;color: #555">
+  <div  class="weui-tabbar__item" style="background-color: #fff;color: #555;min-height: 40px">
     <div style="height: 5px"></div>
     <div class="weui-tabbar__label">
       总计：<span style="color: #e35b5a">￥</span><span id="count" style="color: #e35b5a">{{count}}</span>
@@ -66,7 +60,7 @@
     </div>
   </div>
 
-  <a routerLink="/rent" class="weui-tabbar__item" style="background-color: green">
+  <a routerLink="/rent" class="weui-tabbar__item" style="background-color: green;;min-height: 40px">
     <div style="height: 5px"></div>
 
     <p class="weui-tabbar__label" style="color: #fff!important;">立即结算</p>
