--- a/ng-ebook/src/app/Product/product-detail.component.html
+++ b/ng-ebook/src/app/Product/product-detail.component.html
@@ -11,7 +11,7 @@
 <carousel>
   <slide *ngFor="let pic of products.Pic">
     <div style="text-align: center">
-      <div [ngStyle]="{'background-image':+'url('+ pic.Image+')'}" style="position: relative;background-position: center;background-size: cover;min-height: 300px">
+      <div [ngStyle]="{'background-image':+'url('+ pic.Image+')'}" style="position: relative;background-position: center;background-size: cover;min-height: 400px;width: 80%">
         <img src="assets/admin/img/tm.png" width="100%" height="auto" alt="">
       </div>
     </div>
