--- a/ng-ebook/src/app/Home/home.component.html
+++ b/ng-ebook/src/app/Home/home.component.html
@@ -13,8 +13,8 @@
   <div class="row" style="text-align: center">
     <div class="height15"></div>
 
-    <a *ngFor="let categorie of categories" [routerLink]="['/product', categorie.Id]" class=" col-xs-3 col-md-3 category_box ">
-      <div class="weui-grid__icon" style="color: #777">
+    <a *ngFor="let categorie of categories" [routerLink]="['/product', categorie.Id]" class=" col-xs-3 col-md-3 category_box " style="min-height: 77px">
+      <div class="weui-grid__icon" style="color: #777;margin-bottom: 10px">
         <i class="fa fa-bars fa-2x"> </i>
       </div>
       <p class="weui-grid__label">
