--- a/ng-ebook/src/app/Home/home.component.html
+++ b/ng-ebook/src/app/Home/home.component.html
@@ -14,7 +14,7 @@
     <div class="height15"></div>
 
     <a *ngFor="let categorie of categories" [routerLink]="['/product', categorie.Id]" class=" col-xs-3 col-md-3 category_box " style="min-height: 77px">
-      <div class="weui-grid__icon" style="color: #777;margin-bottom: 10px">
+      <div class="weui-grid__icon" style="color: #777;">
         <i class="fa fa-bars" style="margin-bottom: 10px"> </i>
       </div>
       <p class="weui-grid__label">
