--- a/ng-ebook/src/app/Product/product-buy.component.html
+++ b/ng-ebook/src/app/Product/product-buy.component.html
@@ -27,12 +27,12 @@
     <div class="col-xs-8" style="max-height: 90px">
       <div style="height: 48px;overflow: hidden">
         <span class="fontSize12 lineHeight">
-          全新正版-测试测试测试常擦擦发放AASasdasd按时是sadafafa sas sad as sa sad
+          {{products.Name}}-{{products.Content}}
         </span>
       </div>
       <div class="height10"></div>
       <div>
-        <span style="font-size: 10px;color: #e35b5a">￥</span><span style="color: #e35b5a;font-size: 16px">180</span>
+        <span style="font-size: 10px;color: #e35b5a">￥</span><span style="color: #e35b5a;font-size: 16px">{{products.Price}}</span>
         <span class="floatRight fontSize12" style="margin-right: 10px">×1</span>
       </div>
     </div>
