--- a/views/admin/login.html
+++ b/views/admin/login.html
@@ -72,6 +72,7 @@
             <input id="username" type="text" class="form-control" value="" placeholder="username">
             <div class="margin-top-15"></div>
             <input id="password" type="password" class="form-control" value="" placeholder="password">
+            <input id="codeyzm" type="text" class="form-control" value="" placeholder="">
             <input hidden id="codeid" />
             <div><img src="" id="codeimg" onclick="refreshCode()"></div>
         </form>
